feat: Added user controller apis with configs
